--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub</title>
+    <title>Curso de Git e GitHub</title>
 </head>
 <body>
-    
+    <h2>Minha página inicial</h2>  
 </body>
 </html>
